# advocacia-aberta

./: .gitignore  AGENTS.md  ARQUITETURA.md  CLAUDE.md  COMECE-AQUI.md  CONTRIBUTING.md  CREDITOS.md  GERENCIAR-CONTEXTO.md  GLOSSARIO.md  LICENSE  MANIFESTO.md  PARA-ADVOGADOS.md  PARA-DESENVOLVEDORES.md  PRINCIPIOS.md  README.md  setup.command  setup.sh
.agents/skills/2.2-buscar-fontes/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/0.1-criar-skill/: SKILL.md
.github/: social-preview.typ
.github/workflows/: compatibilidade.yml  monitorar-base.yml
base-juridica/: ATUALIZACAO.md  AVALIACAO-RECUPERACAO.md  BACKLOG.md  CATALOGO.md  README.md  TAXONOMIA.md  fontes.json  fontes.schema.json  indices-derivados.json  indices-derivados.schema.json  snapshots.json  snapshots.schema.json
base-juridica/expansao/: normas.json
base-juridica/verificacoes/: BASE-006.md  BASE-007.md  BASE-009.md  BASE-010.md  BASE-011.md  BASE-013.md  BASE-014.md  BASE-017.md  BASE-021.md  BASE-025.md
casos/: README.md
casos/_modelo-de-caso/: README.md
ferramentas/manutencao/: atualizar_base_juridica.py  auditar_base_juridica.py  gerar_expansao_legislacao.py  gerar_indices_derivados.py  gerar_snapshots.py  monitorar-fontes-restritas.sh  monitorar-stj-local.sh  revisar_expansao.py  sincronizar-skills.sh  validar_integridade.py  verificar_compatibilidade.py
ferramentas/pesquisa/busca-tjpr/: README.md  pyproject.toml
ferramentas/pesquisa/busca-tjpr/src/busca_tjpr/: __init__.py  __main__.py  browser.py  tjpr.py
templates/: parecer-trafico-drogas.typ
(+310 files in other folders)
