[project]
name = "busca_tjpr"
description = "Busca de acórdãos no portal de jurisprudência do TJPR via scraping headless."
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.52.4",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/busca_tjpr"]
